tests/rascal/negative/parse_errors/L2/case-sep.ob
MODULE Bla;

BEGIN
  CASE x OF
    x: y := 1
    y: x := 0
  END
END Bla.